--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -87,6 +87,10 @@
           class="w-full px-3 py-2 text-left rounded-lg hover:bg-gray-700 transition duration-200">
           Etiquetas
         </button>
+        <button routerLinkActive="bg-secondaryColor" [routerLink]="['/dashboard/clasificaciones']"
+          class="w-full px-3 py-2 text-left rounded-lg hover:bg-gray-700 transition duration-200">
+          Clasificaciones
+        </button>
       </div>
     </li>
 
