--- a/src/app/pages/etiquetas/etiquetas.component.html
+++ b/src/app/pages/etiquetas/etiquetas.component.html
@@ -10,7 +10,7 @@
       <input #inputEtiqueta type="text" (keyup.enter)="estadoAbm == 'crear' ? nuevaEtiqueta() : actualizarEtiqueta()"
         [(ngModel)]="abmForm.descripcion"
         class="w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-primaryColor focus:border-primaryColor"
-        placeholder="Ej. Ferretería">
+        placeholder="Ej. Limpieza">
     </div>
   </div>
 </app-modal>
