--- a/src/app/pages/clasificaciones/clasificaciones.component.html
+++ b/src/app/pages/clasificaciones/clasificaciones.component.html
@@ -12,6 +12,15 @@
         class="w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-primaryColor focus:border-primaryColor"
         placeholder="Ej. Ferretería">
     </div>
+    <div class="mt-4">
+      <label for="puntuacion" class="block text-sm font-medium text-gray-700 mb-2"> <span class="text-red-500"> *</span>
+        Puntuación</label>
+      <input id="puntuacion" type="number"
+        (keyup.enter)="estadoAbm == 'crear' ? nuevaClasificacion() : actualizarClasificacion()"
+        [(ngModel)]="abmForm.puntuacion"
+        class="w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-primaryColor focus:border-primaryColor"
+        placeholder="Ej. 10">
+    </div>
   </div>
 </app-modal>
 
