--- a/src/app/pages/clasificaciones/clasificaciones.component.html
+++ b/src/app/pages/clasificaciones/clasificaciones.component.html
@@ -10,7 +10,7 @@
       <input #inputClasificacion type="text" (keyup.enter)="estadoAbm == 'crear' ? nuevaClasificacion() : actualizarClasificacion()"
         [(ngModel)]="abmForm.descripcion"
         class="w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-primaryColor focus:border-primaryColor"
-        placeholder="Ej. Ferretería">
+        placeholder="Ej. Muy bueno">
     </div>
     <div class="mt-4">
       <label for="puntuacion" class="block text-sm font-medium text-gray-700 mb-2"> <span class="text-red-500"> *</span>
@@ -19,7 +19,7 @@
         (keyup.enter)="estadoAbm == 'crear' ? nuevaClasificacion() : actualizarClasificacion()"
         [(ngModel)]="abmForm.puntuacion"
         class="w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-primaryColor focus:border-primaryColor"
-        placeholder="Ej. 10">
+        placeholder="Ej. 5">
     </div>
   </div>
 </app-modal>
