--- a/src/app/pages/clasificaciones/clasificaciones.component.html
+++ b/src/app/pages/clasificaciones/clasificaciones.component.html
@@ -15,7 +15,7 @@
     <div class="mt-4">
       <label for="puntuacion" class="block text-sm font-medium text-gray-700 mb-2"> <span class="text-red-500"> *</span>
         Puntuación</label>
-      <input id="puntuacion" type="number"
+      <input id="puntuacion" type="number" min="1" max="5"
         (keyup.enter)="estadoAbm == 'crear' ? nuevaClasificacion() : actualizarClasificacion()"
         [(ngModel)]="abmForm.puntuacion"
         class="w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-primaryColor focus:border-primaryColor"
