--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,5 +1,5 @@
 
-<div class="gsap-contenido">
+<div>
   <div class="text-center flex flex-col items-center justify-center my-4 md:my-10 mb-5">
     <div class="p-8 bg-white rounded-lg group border shadow border-gray-200">
       <img class="w-52 md:w-72 group-hover:scale-105 transition-all" src="assets/img/Logo.png">
@@ -7,7 +7,7 @@
     <h1 class="text-xl md:text-3xl mt-8"> EQUINOCCIO TEMPLATE </h1>
     <p class="text-gray-600 mt-2"> Version 1.1.0 </p>
   </div>
-  <div class="mt-10 grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6 w-full max-w-5xl mx-auto pb-10">
+  <div class="mt-10 grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 w-full max-w-5xl mx-auto pb-10">
 
     <div title="Usuarios" routerLink="/dashboard/usuarios"
       class="nav-card w-44 h-32 group duration-200 relative shadow-lg rounded-lg justify-center cursor-pointer border border-gray-200 bg-gray-100 text-center transform hover:-translate-y-2 hover:shadow-2xl">
