--- a/src/app/pages/categorias/detalles-categorias/detalles-categorias.component.html
+++ b/src/app/pages/categorias/detalles-categorias/detalles-categorias.component.html
@@ -22,7 +22,7 @@
     </div>
 
     <!-- Listado de clasificaciones -->
-      <div class="bg-white p-6">
+    <div class="bg-white p-6">
       <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4">
         <div *ngFor="let clasificacion of clasificaciones" [class]="getColorFondo(clasificacion.puntuacion)"
           class="border-2 hover:shadow-lg transition-all duration-300 rounded-lg p-5">
@@ -66,8 +66,8 @@
 
           <!-- Etiquetas asociadas -->
           <div class="mt-3">
-            <ng-container *ngIf="getEtiquetasPorClasificacion(clasificacion._id).length > 0; else sinEtiquetas">
-              <span *ngFor="let etiqueta of getEtiquetasPorClasificacion(clasificacion._id)"
+            <ng-container *ngIf="getEtiquetasPorClasificacion(clasificacion.id).length > 0; else sinEtiquetas">
+              <span *ngFor="let etiqueta of getEtiquetasPorClasificacion(clasificacion.id)"
                 class="inline-block bg-blue-100 text-blue-800 text-xs px-2 py-1 rounded mr-2 mb-2">
                 {{ etiqueta.descripcion }}
               </span>
@@ -100,26 +100,26 @@
   </div>
 </app-tarjeta-lista>
 
-<app-modal
-  [showModal]="modalVisible"
-  (closeModal)="cerrarModal()"
-  [titulo]="'Seleccionar etiqueta para ' + (clasificacionSeleccionada?.descripcion || '')"
-  [showFooter]="false">
+<app-modal [showModal]="modalVisible" (closeModal)="cerrarModal()"
+  [titulo]="'Seleccionar etiqueta para ' + (clasificacionSeleccionada?.descripcion || '')" [showFooter]="false">
   <div class="p-4">
     <input type="text" [(ngModel)]="filtroEtiqueta" placeholder="Buscar etiqueta..."
       class="w-full mb-4 px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-secondaryColor focus:border-secondaryColor">
     <div class="grid grid-cols-1 sm:grid-cols-2 gap-3 max-h-96 overflow-y-auto">
-      <div *ngFor="let etiqueta of etiquetasFiltradas"
-           (click)="agregarEtiqueta(etiqueta)"
-           class="flex items-center p-3 border rounded-lg cursor-pointer bg-white hover:bg-blue-50 hover:shadow-md transform transition-transform duration-200 hover:-translate-y-1">
-        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-blue-500 mr-2" viewBox="0 0 20 20" fill="currentColor">
-          <path fill-rule="evenodd" d="M17.707 7.293l-5-5A1 1 0 0012 2H5a1 1 0 00-1 1v7a1 1 0 00.293.707l5 5a1 1 0 001.414 0l7-7a1 1 0 000-1.414zM6 6a1 1 0 112 0 1 1 0 01-2 0z" clip-rule="evenodd" />
+      <div *ngFor="let etiqueta of etiquetasFiltradas" (click)="agregarEtiqueta(etiqueta)"
+        class="flex items-center p-3 border rounded-lg cursor-pointer bg-white hover:bg-blue-50 hover:shadow-md transform transition-transform duration-200 hover:-translate-y-1">
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-blue-500 mr-2" viewBox="0 0 20 20"
+          fill="currentColor">
+          <path fill-rule="evenodd"
+            d="M17.707 7.293l-5-5A1 1 0 0012 2H5a1 1 0 00-1 1v7a1 1 0 00.293.707l5 5a1 1 0 001.414 0l7-7a1 1 0 000-1.414zM6 6a1 1 0 112 0 1 1 0 01-2 0z"
+            clip-rule="evenodd" />
         </svg>
         <span class="text-gray-700">{{ etiqueta.descripcion }}</span>
       </div>
     </div>
     <div class="flex justify-end mt-4">
-      <button (click)="cerrarModal()" class="px-4 py-2 text-sm font-medium text-gray-700 hover:bg-gray-100 rounded-md transition-colors">Cancelar</button>
+      <button (click)="cerrarModal()"
+        class="px-4 py-2 text-sm font-medium text-gray-700 hover:bg-gray-100 rounded-md transition-colors">Cancelar</button>
     </div>
   </div>
 </app-modal>
