--- a/src/app/pages/categorias/detalles-categorias/detalles-categorias.component.html
+++ b/src/app/pages/categorias/detalles-categorias/detalles-categorias.component.html
@@ -67,9 +67,14 @@
           <!-- Etiquetas asociadas -->
           <div class="mt-3">
             <ng-container *ngIf="getEtiquetasPorClasificacion(clasificacion.id).length > 0; else sinEtiquetas">
-              <span *ngFor="let etiqueta of getEtiquetasPorClasificacion(clasificacion.id)"
-                class="inline-block bg-blue-100 text-blue-800 text-xs px-2 py-1 rounded mr-2 mb-2">
-                {{ etiqueta.descripcion }}
+              <span *ngFor="let ea of getEtiquetasPorClasificacion(clasificacion.id)"
+                class="inline-flex items-center bg-blue-100 text-blue-800 text-xs px-2 py-1 rounded mr-2 mb-2">
+                {{ ea.etiqueta.descripcion }}
+                <button (click)="eliminarEtiqueta(ea, clasificacion.id)" class="ml-1 text-red-500 hover:text-red-700">
+                  <svg xmlns="http://www.w3.org/2000/svg" class="h-3 w-3" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
+                  </svg>
+                </button>
               </span>
             </ng-container>
             <ng-template #sinEtiquetas>
